# snort3

./: .bazelrc  .clang-tidy  .dockerignore  .gitignore  BAZEL.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CPackConfig_DEB.cmake  ChangeLog  ChangeLog.md  Dockerfile  ISSUE_376_VERIFICATION.md  LICENSE.md  MODULE.bazel  Makefile  Makefile.am  README  README.md  config.cmake.h.in  configure.ac  configure_cmake.sh  crusty.cfg  defs.bzl  readme_GRUPO_12.md  readme_GRUPO_13.md  snort-installer.sh  snort.pc.in
daqs/: BUILD.bazel  CMakeLists.txt  Makefile.am  daq_file.c  daq_hext.c  daq_socket.c  daq_user.h
doc/: BUILD.bazel  CMakeLists.txt  Makefile.am  active.txt  appid.txt  binder.txt  bugs.txt  building.txt  byte_extract.txt  byte_math.txt  byte_test.txt  cmake_scripts.cmake  concepts.txt  config_changes.txt  connector.txt  connectors.txt  daq.txt  daq_readme.txt  dcerpc.txt  default_snort_manual.html  default_snort_manual.text  dev_guide.sh  differences.txt  enviro.txt  errors.txt  extending.txt  features.txt  file_processing.txt  ftp.txt  get_differences.rb  gids.txt  help.cmake  help.txt  high_availability.txt  http2_inspect.txt  http_inspect.txt  module_output.cmake  module_trace.txt  online_manual.sh  overview.txt  (+23 more)
doc/devel/: CMakeLists.txt  extending.txt  snort_devel.sh  snort_devel.txt  style.txt  versions.txt
doc/html/: CMakeLists.txt
doc/manual/: file_processing.txt  perf_monitor.txt
doc/pdf/: CMakeLists.txt
doc/reference/: CMakeLists.txt  appendix.txt  building.txt  builtin_stubs.txt  enviro.txt  foo.txt  snort_reference.text  snort_reference.txt
doc/scripts/: generate_help.sh  generate_list.sh  generate_module.sh
doc/text/: CMakeLists.txt
doc/upgrade/: CMakeLists.txt  config_changes.txt  differences.txt  get_differences.rb  overview.txt  snort2lua.txt  snort_upgrade.text  snort_upgrade.txt
doc/user/: CMakeLists.txt  active.txt  appid.txt  binder.txt  byte_extract.txt  byte_jump.txt  byte_options.txt  byte_test.txt  concepts.txt  connectors.txt  consolidated_config.txt  daq.txt  dcerpc.txt  dump_config.txt  extractor.txt  features.txt  file_processing.txt  high_availability.txt  http2_inspect.txt  http_inspect.txt  iec104.txt  js_norm.txt  mms.txt  online_manual.sh  overview.txt  params.txt  perf_monitor.txt  pop_imap.txt  port_scan.txt  sensitive_data.txt  side_channel.txt  smtp.txt  snort_user.text  snort_user.txt  socks.txt  telnet.txt  trace.txt  tutorial.txt  usage.txt  wizard.txt
extra/: .gitignore  CMakeLists.txt  COPYING  FindDAQ.cmake  FindLuaJIT.cmake  FindSNORT.cmake  FindSnort.cmake  LICENSE  Makefile.am  README  configure.ac  configure_cmake.sh  generate_boilerplate.sh  packaging_data.cmake
extra/cmake/: configure_options.cmake  create_options.cmake
extra/examples/: Makefile.am
extra/m4/: visibility.m4
extra/scripts/: expand_template.rb
extra/src/: CMakeLists.txt  Makefile.am
extra/templates/: CMakeLists.txt.erb  Makefile.am.erb
src/: BUILD.bazel  CMakeLists.txt  Makefile.am  analyzer.cc  analyzer.h  dev_notes.txt  main.cc  main.h  policy.cc  policy.h  snort.cc  snort.h  snort_config.cc  snort_config.h  snort_types.h
src/actions/: BUILD.bazel  CMakeLists.txt  Makefile.am  act_alert.cc  act_block.cc  act_drop.cc  act_file_id.cc  act_log.cc  act_pass.cc  act_react.cc  act_reject.cc  act_replace.cc  act_replace.h  act_resp.cc  actions.cc  actions.h  actions_module.cc  actions_module.h  dev_notes.txt  ips_actions.cc  ips_actions.h
src/catch/: BUILD.bazel  CMakeLists.txt  Makefile.am  catch.hpp  catch_main.cc  dev_notes.txt  snort_catch.h  unit_test.cc  unit_test.h  unit_test_main.h
src/codecs/: BUILD.bazel  CMakeLists.txt  Makefile.am  cd_stats.cc  cd_stats.h  checksum.cc  checksum.h  codec_api.cc  codec_api.h  codec_events.cc  codec_events.h  codec_module.cc  codec_module.h  decode.cc  decode.h  decode_module.cc  decode_module.h  decode_stats.h  dev_notes.txt  encode.cc  encode.cc.bak  encode.h  encode.h.bak  ipv6_util.cc  ipv6_util.h  layer.h  sf_protocols.h  template.cc  template_module.cc  template_module.h
src/connectors/: BUILD.bazel  CMakeLists.txt  Makefile.am  connectors.cc  connectors.h  dev_notes.txt
src/control/: BUILD.bazel  CMakeLists.txt  Makefile.am  control.cc  control.h  control_mgmt.cc  control_mgmt.h  dev_notes.txt  idle_processing.cc  idle_processing.h
src/decompress/: BUILD.bazel  CMakeLists.txt  Makefile.am  dev_notes.txt  file_decomp.cc  file_decomp.h  file_decomp_pdf.cc  file_decomp_pdf.h  file_decomp_swf.cc  file_decomp_swf.h  file_decomp_zip.cc  file_decomp_zip.h  file_olefile.cc  file_olefile.h  file_oleheader.cc  file_oleheader.h
src/detection/: BUILD.bazel  CMakeLists.txt  Makefile.am  context_switcher.cc  context_switcher.h  detect.cc  detect.h  detect_trace.cc  detect_trace.h  detection_buf.h  detection_continuation.h  detection_defines.h  detection_engine.cc  detection_engine.h  detection_module.cc  detection_module.h  detection_options.cc  detection_options.h  detection_util.cc  detection_util.h  dev_notes.txt  event_trace.cc  event_trace.h  extract.cc  extract.h  fp_config.cc  fp_config.h  fp_create.cc  fp_create.h  fp_detect.cc  fp_detect.h  fp_utils.cc  fp_utils.h  fpcreate.cc  fpcreate.h  fpdetect.cc  fpdetect.h  generators.h  ips_context.cc  ips_context.h  (+24 more)
src/dump_config/: BUILD.bazel  CMakeLists.txt  config_data.cc  config_data.h  config_output.cc  config_output.h  dev_notes.txt  json_config_output.cc  json_config_output.h  text_config_output.cc  text_config_output.h
src/events/: BUILD.bazel  CMakeLists.txt  Makefile.am  codec_events.cc  codec_events.h  dev_notes.txt  event.cc  event.h  event_queue.cc  event_queue.h  event_wrapper.cc  event_wrapper.h  sfeventq.cc  sfeventq.h
src/file_api/: BUILD.bazel  CMakeLists.txt  Makefile.am  circular_buffer.cc  circular_buffer.h  dev_notes.txt  file_api.cc  file_api.h  file_cache.cc  file_cache.h  file_cache_share.cc  file_cache_share.h  file_capture.cc  file_capture.h  file_config.cc  file_config.h  file_enforcer.cc  file_enforcer.h  file_flows.cc  file_flows.h  file_identifier.cc  file_identifier.h  file_inspect.cc  file_inspect.h  (+29 more)
(+4246 files in other folders)
